--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,32 +2,32 @@
 NODE_ENV=development
 PORT=5000
 
-# Database
-MONGODB_URI=mongodb+srv://dev070panchal:DfZqq9wzSGbdRI4Q@devang07.r2hql2q.mongodb.net/
-MONGODB_TEST_URI=mongodb+srv://dev070panchal:DfZqq9wzSGbdRI4Q@devang07.r2hql2q.mongodb.net/
+# Database - Replace with your MongoDB Atlas connection string
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/green-hydrogen-subsidy?retryWrites=true&w=majority
+MONGODB_TEST_URI=mongodb+srv://username:password@cluster.mongodb.net/green-hydrogen-test?retryWrites=true&w=majority
 
-# JWT
-JWT_SECRET=43519750-e783-4454-95e5-0111e6da0164
+# JWT - Generate a secure random secret
+JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRE=30d
 
-# Email Configuration
+# Email Configuration - Use your email service credentials
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=sspcreation09876@gmail.com
-EMAIL_PASS=123
-EMAIL_FROM=sspcreation09876@gmail.com
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password-here
+EMAIL_FROM=your-email@gmail.com
 EMAIL_FROM_NAME=Green Hydrogen Platform
 
-# Client URL
-CLIENT_URL=http://localhost:3001
+# Client URL - Frontend URL for CORS
+CLIENT_URL=http://localhost:3002
 
-# Blockchain Configuration
+# Blockchain Configuration - Replace with your blockchain network details
 BLOCKCHAIN_NETWORK=localhost
 BLOCKCHAIN_RPC_URL=http://localhost:8545
 CONTRACT_ADDRESS=0x1234567890123456789012345678901234567890
 PRIVATE_KEY=your-private-key-here
 
-# Oracle Services (Optional)
+# Oracle Services (Optional) - Replace with your API keys
 WEATHER_API_URL=https://api.openweathermap.org/data/2.5
 WEATHER_API_KEY=your-weather-api-key
 ENERGY_API_URL=https://your-energy-api.com/api/v1
@@ -48,8 +48,8 @@ LOCK_TIME=900000
 RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX=100
 
-# CORS
-CORS_ORIGIN=http://localhost:3001
+# CORS - Frontend URL for CORS
+CORS_ORIGIN=http://localhost:3002
 
 # Timezone
 TIMEZONE=Asia/Kolkata
